SERVER-62720 Implement checkIfConflictsWithOtherInstances for ReshardingCoordinatorService